<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_1"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="165dp"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/logo_app"
        android:gravity="center"
        android:layout_margin="5dp"
        android:layout_gravity="center" />
    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="18dp"
        android:text="Ver"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginLeft="60dp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="130dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_kk_1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/white_kk_1"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" 
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tx_username"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/Username"
                    android:textColor="@color/black"
                    android:textSize="14sp" 
                    />

                <EditText
                    android:id="@+id/ed_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/username"
                    android:maxLength="32"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
 
                <TextView
                    android:id="@+id/tx_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:singleLine="true"
                    android:textColor="@color/blue"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tx_min"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/Min"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/tx_password"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/Password"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
                <EditText
                            android:id="@+id/ed_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:maxLength="32"
                            android:password="true"
                            android:singleLine="true"
                            android:textSize="14sp"
                            android:layout_weight="3"/>
                <TextView
                    android:id="@+id/tx_flux"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:singleLine="true"
                    android:textColor="@color/blue"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tx_mbyte"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/MByte"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
                
                
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/bt_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/login"
            android:textColor="@color/light_green"
            android:textSize="18sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/cb_keep_password"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/Remember_my_password"
            android:textColor="@color/light_blue"
            android:textSize="16sp"
            android:typeface="normal" >
        </CheckBox>

        <CheckBox
            android:id="@+id/cb_sign"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/Sign_in_Automatically"
            android:textColor="@color/light_blue"
            android:textSize="16sp" >
        </CheckBox>
    </LinearLayout>

    

</LinearLayout>